# tangara-mlds-unal-2024

./: .gitignore  README.md  install-poetry.sh  pyproject.toml
src/: README.md
src/imgs2pdf/: README.md  main.py
src/mlds/: README.md
src/tangara/: README.md  example.env
src/tangara/data/: README.md
src/tangara/notebooks/: concat_tangara_datasets.ipynb  hum_raw.ipynb  pm25_raw.ipynb  tangara_dataset.ipynb  tangaras.ipynb  temp_raw.ipynb  utils.ipynb
src/tangara/scripts/: concat_tangara_datasets.sh  x_time.sh
